crates/phynix-parse/tests/expr/snapshots/tests__expr__mod_tests__assignment.snap
---
source: crates/phynix-parse/tests/expr/mod_tests.rs
assertion_line: 10
expression: script
---
items:
  - ExprStmt:
      expr:
        Assign:
          target:
            VarRef:
              name: {}
          value:
            IntLiteral:
              value: 1
