crates/phynix-parse/tests/expr/snapshots/tests__expr__mod_tests__binary_op_not_eq_alt.snap
---
source: crates/phynix-parse/tests/expr/mod_tests.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        BinaryOp:
          op: CmpNe
          left:
            VarRef:
              name: {}
          right:
            VarRef:
              name: {}
