crates/phynix-parse/tests/expr/snapshots/tests__expr__mod_tests__compound_assignment.snap
---
source: crates/phynix-parse/tests/expr/mod_tests.rs
assertion_line: 15
expression: script
---
items:
  - ExprStmt:
      expr:
        CompoundAssign:
          op: Add
          target:
            VarRef:
              name: {}
          value:
            IntLiteral:
              value: 1
