crates/phynix-parse/tests/expr/snapshots/tests__expr__mod_tests__method_call.snap
---
source: crates/phynix-parse/tests/expr/mod_tests.rs
assertion_line: 25
expression: script
---
items:
  - ExprStmt:
      expr:
        MethodCall:
          target:
            VarRef:
              name: {}
          method: {}
          args:
            - name: ~
              unpack: false
              expr:
                IntLiteral:
                  value: 1
